# llm-mina-chain

./: .gitignore  Dockerfile  PRODUCTION_PLAN.md  PROTOCOL_RULES.md  README.md  core.py  integration-check.sh  render.yaml  requirements.txt
.windsurf/workflows/: agent-1-core-runtime.md  integration.md
cpp/: CMakeLists.txt
cpp/include/: core.h  llm_layer.h
cpp/src/: core.cpp  llm_layer.cpp  node.cpp
rust/: ARCHITECTURE.md  Canonical.toml  Cargo.toml  Makefile  SCHEMA.md
rust/benches/: blockchain_bench.rs
rust/examples/: one_node_demo.rs  production_checklist.rs  three_node_demo.rs
rust/src/: api.rs  consensus.rs  crypto.rs  health.rs  lib.rs  llm_layer.rs  metrics.rs  network.rs  network_failed.rs  network_failed2.rs  node.rs  security.rs  storage.rs  wasm_mining.rs  zkproof.rs
rust/src/protocol/: config.rs  logging.rs  mod.rs  receipt.rs  types.rs
rust/src/semantic_runtime/: context.rs  mod.rs  orchestrator.rs  query_router.rs  session_memory.rs  types.rs
rust/src/solana_agent/: api.rs  auth.rs  cli.rs  decoder.rs  export.rs  knowledge_base.rs  mod.rs  query_engine.rs  rpc_client.rs  storage.rs  tests.rs
rust/src/solana_agent/query/: ast.rs  mod.rs  parser.rs  planner.rs  tokenizer.rs
rust/src/solana_agent/stream/: client.rs  mod.rs  types.rs
rust/tests/: blockchain_tests.rs  crypto_tests.rs  daily_integration.rs  integration_tests.rs  replay_tests.rs  security_tests.rs
web/: index.html  package-lock.json  package.json  tailwind.config.js
web/src/: App.jsx  index.css
web/src/screens/: AtomicSettlement.jsx  BrowserNode.jsx  BuildConsole.jsx  DevProvenance.jsx  HomeScreen.jsx  IntentBuilder.jsx  ProvenanceExplorer.jsx
