[package]
name = "llm-mina-chain"
version = "0.1.0"
edition = "2021"

[features]
default = ["zk", "solana"]
network = ["libp2p"]
solana = ["reqwest", "axum", "tower", "tokio-tungstenite", "bincode"]
semantic = []
zk = ["ark-ec", "ark-ff", "ark-poly", "ark-serialize", "ark-crypto-primitives", "ark-bn254", "ark-groth16", "ark-std", "ark-r1cs-std", "ark-relations", "ark-snark"]

[dependencies]
# Core crypto
sha2 = "0.10"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
rand = "0.8"
rand_core = "0.6"
hex = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = "0.4"

# Regex for LLM parsing
regex = "1.10"

# Persistent storage
rocksdb = "0.21"
thiserror = "1.0"
tempfile = "3.8"

# P2P networking
libp2p = { version = "0.53", features = ["tokio", "gossipsub", "mdns", "noise", "yamux", "quic", "tcp", "macros"], optional = true }
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Solana Agent
reqwest = { version = "0.11", features = ["json"], optional = true }
axum = { version = "0.6", features = ["ws"], optional = true }
tower = { version = "0.4", optional = true }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"], optional = true }
bincode = { version = "1.3", optional = true }
csv = "1.3"

# Metrics and monitoring
prometheus = "0.13"
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }

# Testing
proptest = "1.4"

# zk-SNARKs (arkworks)
ark-ec = { version = "0.4", optional = true }
ark-ff = { version = "0.4", optional = true }
ark-poly = { version = "0.4", optional = true }
ark-serialize = { version = "0.4", optional = true }
ark-crypto-primitives = { version = "0.4", optional = true }
ark-bn254 = { version = "0.4", optional = true }
ark-groth16 = { version = "0.4", optional = true }
ark-r1cs-std = { version = "0.4", optional = true }
ark-snark = { version = "0.4", optional = true }
ark-std = { version = "0.4", optional = true }
ark-relations = { version = "0.4", optional = true }

# Logging and config
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.13"
toml = "0.8"

# Merkle tree
rs_merkle = "1.4"

# Operational tooling
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.22"
bs58 = "0.5"

# WebAssembly
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window", "Worker", "WorkerOptions", "MessageEvent"] }

[dev-dependencies]
criterion = "0.5"

[lib]
name = "llm_mina_chain"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "llm-mina-node"
path = "src/node.rs"

[[bin]]
name = "solana-agent-server"
path = "src/bin/solana-agent-server.rs"
required-features = ["solana"]

[[bin]]
name = "solana-agent-cli"
path = "src/bin/solana-agent-cli.rs"
required-features = ["solana"]

[[bin]]
name = "semantic-runtime"
path = "src/bin/semantic-runtime.rs"
required-features = ["semantic"]

[[example]]
name = "one_node_demo"
path = "examples/one_node_demo.rs"

[[example]]
name = "three_node_demo"
path = "examples/three_node_demo.rs"

[[bench]]
name = "blockchain_bench"
harness = false
